tests/negative/Internal/ExpectedExplicitPattern.juvix
module ExpectedExplicitPattern;
  type T (A : Type) :=
    c : A → T A;

  f : {A : Type} → T A → A;
  f {_} {c a} := a;
end;
